--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="history"> History </string>
     <string name="sessionButton"> Exit </string>
     <string name="back_button_description"> Back Button in the history view layout </string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
