--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="sessionButton"> Exit </string>
     <string name="back_button_description"> Back Button in the history view layout </string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_profile">Hello profile</string>
+    <string name="hello_menu">Hello menu</string>
+    <string name="hello_history">Hello history</string>
 </resources>
