"Changed Icon and App Name"

--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MuseCMEB</string>
+    <string name="app_name">MindFlow</string>
     <string name="history"> History </string>
     <string name="sessionButton"> Exit </string>
     <string name="back_button_description"> Back Button in the history view layout </string>
