--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="hello_menu">Hello menu</string>
     <string name="hello_history">Hello history</string>
     <string name="dash">-</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="app_widget_description">This is an app widget description</string>
 </resources>
